<resources>
    <string name="app_name">SertrolSign</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="show_screenshot">Take Screenshot</string>
    <string name="name_organitaion">Nombre de la Empresa</string>
    <string name="email_organitation">Email Empresa</string>
    <string name="phone_empresa">Telefono Empresa</string>
    <string name="descripcion_proyecto">Descripcion del proyecto</string>
    <string name="name_proyecto">Nombre del proyecto</string>
    <string name="address_empresa">Direccion Empresa</string>
    <string name="responsable_empresa">Responsable Empresa</string>
    <string name="descripcion_servicio">Descripcion del servicio</string>
    <string name="login_user">User</string>
    <string name="name_empresa">Empresa</string>
    <string name="login_password">Password</string>
    <string name="login_button">Ingresar</string>
    <string name="information_additional">Informacion adicional</string>
    <string name="signature_label">Inserta tu firma here</string>
    <string name="description_label">Descripcion:</string>
    <string name="description_reporte_servicio_label">Reportes de servicios</string>
    <string name="organization_label">Inserta la informacion de la empresa</string>
    <string name="title_activity_login">Sign in</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
        id est laborum.</string>

    <string name="lorem_ipsum_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua.</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_server">Error en el servidor</string>
    <string name="error_network">Conexión de red no disponible</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
