<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/side_view">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/organization_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/organization_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrey"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_name_organization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_name_organization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_organitaion"
                        android:inputType="textCapWords"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:errorTextAppearance="@color/green">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_organitation"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/information_additional"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/description_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="16dp"
                    android:text="@string/description_label"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:paddingBottom="16dp"
                    android:textSize="15sp"
                    android:text="@string/lorem_ipsum"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:textSize="15sp"
                    android:text="@string/signature_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <ImageView
                    android:id="@+id/img_screen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />

                <com.rm.freedrawview.FreeDrawView
                    android:id="@+id/draw_signature"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/white"
                    app:paintColor="@color/black"
                    app:paintWidth="@dimen/signature_paint_width"
                    app:resizeBehaviour="crop" />
                <!-- app:paintWidth  Ancho del pincel  app:paintColor color del pincel -->

                <Button
                    android:id="@+id/btn_clear_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="Limpiar Lienzo"
                    android:enabled="false"
                    android:textColor="@color/lightGrey"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightGrey"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:enabled="false"
                    android:text="Enviar Formulario"
                    android:textColor="@color/lightGrey"
                    android:textStyle="bold"
                    android:textSize="15sp" />


            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>
