
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_name_empresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_organitaion"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:errorTextAppearance="@color/green">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_empresa"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:errorTextAppearance="@color/green">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_direcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_empresa"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrey" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_clear_all"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Limpiar Campos"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/lightGrey"
                android:textSize="15sp"
                android:textStyle="bold" />
                <!-- android:enabled="false" -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrey" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_send"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enviar Formulario"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/lightGrey"
                android:textSize="15sp"
                android:textStyle="bold" />
            <!-- android:enabled="false" -->
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>

