<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/organization_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/organization_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_responsable_empresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_responsable_empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/responsable_empresa"
            android:inputType="textCapWords" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_descripcion_servicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_descripcion_servicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_servicio"
            android:inputType="textMultiLine"
            android:maxLines="6"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Horas"
                android:textColor="#FFFFFF"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@id/tvText"
                android:background="@color/lightGrey"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/tvText"
                android:background="@color/lightGrey"
                />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar"
            android:layout_gravity="center"/>

            <TextView
                android:id="@+id/fecha_entrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/fecha_salida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clock"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/hora_entrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Entrada"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clock"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/hora_salida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Salida"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_box_horas_extras_diaurnas"
            style="@style/CheckBoxRight"
            android:text="Extras Diaurnas (HED)" />

        <CheckBox
            android:id="@+id/check_box_horas_normales"
            style="@style/CheckBoxLeft"
            android:text="Normales (HN)" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_box_horas_feriados"
            style="@style/CheckBoxLeft"
            android:text="Feriados (HF)" />

        <CheckBox
            android:id="@+id/check_box_horas_extras_nocturnas"
            style="@style/CheckBoxRight"
            android:text="Extras Nocturnas (HEN)" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_box_horas_viajes"
            style="@style/CheckBoxLeft"
            android:text="Viajes (HV)" />

        <Switch
            android:id="@+id/switch1"
            style="@style/CheckBoxRight"
            android:text="Prueba" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/one_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".15"
            android:layout_margin="5dp"
            android:text="HED"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>

        <SeekBar
            android:id="@+id/seek_bar_one"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/seek_bar_cantidad_horas_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="0"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/two_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".2"
            android:layout_margin="5dp"
            android:text="HN"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>

        <SeekBar
            android:id="@+id/seek_bar_two"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/seek_bar_cantidad_horas_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="0"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/three_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".2"
            android:layout_margin="5dp"
            android:text="HF"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>

        <SeekBar
            android:id="@+id/seek_bar_three"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/seek_bar_cantidad_horas_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="0"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/four_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".13"
            android:layout_margin="5dp"
            android:text="HEN"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>

        <SeekBar
            android:id="@+id/seek_bar_four"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/seek_bar_cantidad_horas_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="0"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/five_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".2"
            android:layout_margin="5dp"
            android:text="HV"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>

        <SeekBar
            android:id="@+id/seek_bar_five"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/seek_bar_cantidad_horas_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="0"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:enabled="false"
        android:text="Enviar Reporte"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        android:textSize="15sp" />


</LinearLayout>
</ScrollView>